# MiniProjects

./: README.md
Catapult/: Catapult.c  README.md
Cpp/Rhythm_Minigame/: CMakeLists.txt  README.md
Cpp/Rhythm_Minigame/src/: main.cpp
LoopStation/Cad/: LED_Bar.prt  Loopstation_case_bottom.prt
LoopStation/LoopStation/: Button_Grid.cpp  Button_Grid.h  LoopStation.ino  led.cpp  led.h
LoopStation/Schematics/: LoopStation-cache.lib  LoopStation-dan-UX430UA.kicad_pcb  LoopStation.kicad_pcb  LoopStation.pro  LoopStation.sch  LoopStation.sch-bak  fp-info-cache  sym-lib-table
MachineLearning/GeneticAlgorithms/: Genome.cpp  Genome.h  a.out
MachineLearning/mach/: a.out  main.cpp
MechanicalGripper/CAD/: BaseCenterPlate.ipt  BaseJointPlate.ipt  BushingLargest.ipt  EndJoint.ipt  MechanicalFinger.iam  MechanicalHand.iam  MechanicalPalm.iam
MechanicalGripper/Documentation/: CADDocumentation.odt  Calculations.odt  CodeDocumentation.odt  IntroDocumentation.odt  MergePdf.txt  PartDocumentation.odt  Summary.odt
MechanicalGripper/MATLAB/: Acceleration.m  ForceAnalysis.m  GearRatio.m  InertialForce.m  MechHand.m  MechHand_2.m  PressingForce.m  Velocity.m
MechanicalGripper/StandardParts/: RetainingRingLarge.ipt  RetainingRingSmall.ipt
Mechanisms/PushPushLatch_V1/: PPL_001.prt  PPL_002.prt  PPL_004.prt  PushPushLatch_V1.prt
PushPushLatch/PushPushLatch_V1/: PPL_003.prt
Python/: README.md
SmartDevices/Opener/: OLD.7z
SmartDevices/PMSensor/: PMSensor.ino
WaterCooling/NX/: Connector.prt  CoolingPad.prt  CoolingPad_EndToEnd.prt  Demo_System.prt  Radiator.prt  (+1 more)
(+145 files in other folders)
